updated with CW and TS edits

--- a/book.bib
+++ b/book.bib
@@ -653,3 +653,18 @@ institution = {Bonneville Power Administration, Portland, OR}
   year={1982},
   publisher={Blackburn press Caldwell, New Jersey}
 }
+@Article{waterhouseBayesianNestedPatch2020,
+  title = {A {{Bayesian}} Nested Patch Occupancy Model to Estimate Steelhead Movement and Abundance},
+  author = {Lynn Waterhouse and Jody White and Kevin See and Andrew Murdoch and Brice X. Semmens},
+  year = {2020},
+  volume = {0},
+  pages = {17},
+  issn = {1939-5582},
+  doi = {10.1002/eap.2202},
+  annotation = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/eap.2202},
+  file = {C\:\\Users\\ryank\\Zotero\\storage\\PSB3A85R\\Waterhouse et al. - 2020 - A Bayesian nested patch occupancy model to estimat.pdf;C\:\\Users\\ryank\\Zotero\\storage\\JBQZE8CN\\eap.html},
+  journal = {Ecological Applications},
+  keywords = {abundance,Bayesian,detection probability,escapement,hierarchical model,nested patch occupancy,PIT tag,river network,salmonid,steelhead},
+  language = {en},
+  number = {0},
+}
